# terminus_outcome

./: CMakeLists.txt  README.md  changelog.md  conanfile.py
test/package/: CMakeLists.txt  conanfile.py  example.cpp
test/unit/: CMakeLists.txt  TEST_optional.cpp
